dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h


extern void* prim_bessel_I0_e(double x);

extern double access_prim_bessel_I0_e_val(HsPtr);

extern double access_prim_bessel_I0_e_err(HsPtr);

extern int access_prim_bessel_I0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_I0_e_gc_failstring(HsPtr);

extern double prim_bessel_I1(double x);

extern void* prim_bessel_I1_e(double x);

extern double access_prim_bessel_I1_e_val(HsPtr);

extern double access_prim_bessel_I1_e_err(HsPtr);

extern int access_prim_bessel_I1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_I1_e_gc_failstring(HsPtr);

extern double prim_bessel_In(int n,double x);

extern void* prim_bessel_In_e(int n,double x);

extern double access_prim_bessel_In_e_val(HsPtr);

extern double access_prim_bessel_In_e_err(HsPtr);

extern int access_prim_bessel_In_e_gc_failed(HsPtr);

extern void* access_prim_bessel_In_e_gc_failstring(HsPtr);

extern double prim_bessel_I0_scaled(double x);

extern void* prim_bessel_I0_scaled_e(double x);

extern double access_prim_bessel_I0_scaled_e_val(HsPtr);

extern double access_prim_bessel_I0_scaled_e_err(HsPtr);

extern int access_prim_bessel_I0_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_I0_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_I1_scaled(double x);

extern void* prim_bessel_I1_scaled_e(double x);

extern double access_prim_bessel_I1_scaled_e_val(HsPtr);

extern double access_prim_bessel_I1_scaled_e_err(HsPtr);

extern int access_prim_bessel_I1_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_I1_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_In_scaled(int n,double x);

extern void* prim_bessel_In_scaled_e(int n,double x);

extern double access_prim_bessel_In_scaled_e_val(HsPtr);

extern double access_prim_bessel_In_scaled_e_err(HsPtr);

extern int access_prim_bessel_In_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_In_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_K0(double x);

extern void* prim_bessel_K0_e(double x);

extern double access_prim_bessel_K0_e_val(HsPtr);

extern double access_prim_bessel_K0_e_err(HsPtr);

extern int access_prim_bessel_K0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_K0_e_gc_failstring(HsPtr);

extern double prim_bessel_K1(double x);

extern void* prim_bessel_K1_e(double x);

extern double access_prim_bessel_K1_e_val(HsPtr);

extern double access_prim_bessel_K1_e_err(HsPtr);

extern int access_prim_bessel_K1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_K1_e_gc_failstring(HsPtr);

extern double prim_bessel_Kn(int n,double x);