dsp/haskelldsp/Numeric/Special/Bessel.hs


bessel_I0_e :: Double -> (Double,Double)
bessel_I0_e x =
  unsafePerformIO(
    prim_bessel_I0_e x
    >>= \ gc_result ->
    access_prim_bessel_I0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_I0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_I0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_I0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I0_e" prim_bessel_I0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_I1 :: Double -> Double
bessel_I1 x =
  unsafePerformIO(
    prim_bessel_I1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I1" prim_bessel_I1 :: Double -> IO (Double)

bessel_I1_e :: Double -> (Double,Double)
bessel_I1_e x =
  unsafePerformIO(
    prim_bessel_I1_e x
    >>= \ gc_result ->
    access_prim_bessel_I1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_I1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_I1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_I1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I1_e" prim_bessel_I1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_In :: Int -> Double -> Double
bessel_In n x =
  unsafePerformIO(
    prim_bessel_In n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_In" prim_bessel_In :: Int -> Double -> IO (Double)

bessel_In_e :: Int -> Double -> (Double,Double)
bessel_In_e n x =
  unsafePerformIO(
    prim_bessel_In_e n x
    >>= \ gc_result ->
    access_prim_bessel_In_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_In_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_In_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_In_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_In_e" prim_bessel_In_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_I0_scaled :: Double -> Double
bessel_I0_scaled x =
  unsafePerformIO(
    prim_bessel_I0_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I0_scaled" prim_bessel_I0_scaled :: Double -> IO (Double)

bessel_I0_scaled_e :: Double -> (Double,Double)
bessel_I0_scaled_e x =
  unsafePerformIO(
    prim_bessel_I0_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_I0_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_I0_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_I0_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_I0_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I0_scaled_e" prim_bessel_I0_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I0_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_I1_scaled :: Double -> Double
bessel_I1_scaled x =
  unsafePerformIO(
    prim_bessel_I1_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I1_scaled" prim_bessel_I1_scaled :: Double -> IO (Double)

bessel_I1_scaled_e :: Double -> (Double,Double)
bessel_I1_scaled_e x =
  unsafePerformIO(
    prim_bessel_I1_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_I1_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_I1_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_I1_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_I1_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_I1_scaled_e" prim_bessel_I1_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_I1_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_In_scaled :: Int -> Double -> Double
bessel_In_scaled n x =
  unsafePerformIO(
    prim_bessel_In_scaled n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_In_scaled" prim_bessel_In_scaled :: Int -> Double -> IO (Double)

bessel_In_scaled_e :: Int -> Double -> (Double,Double)
bessel_In_scaled_e n x =
  unsafePerformIO(
    prim_bessel_In_scaled_e n x
    >>= \ gc_result ->
    access_prim_bessel_In_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_In_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_In_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_In_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_In_scaled_e" prim_bessel_In_scaled_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_In_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_K0 :: Double -> Double
bessel_K0 x =
  unsafePerformIO(
    prim_bessel_K0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K0" prim_bessel_K0 :: Double -> IO (Double)

bessel_K0_e :: Double -> (Double,Double)
bessel_K0_e x =
  unsafePerformIO(
    prim_bessel_K0_e x
    >>= \ gc_result ->
    access_prim_bessel_K0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_K0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_K0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_K0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K0_e" prim_bessel_K0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_K1 :: Double -> Double
bessel_K1 x =
  unsafePerformIO(
    prim_bessel_K1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K1" prim_bessel_K1 :: Double -> IO (Double)

bessel_K1_e :: Double -> (Double,Double)
bessel_K1_e x =
  unsafePerformIO(
    prim_bessel_K1_e x
    >>= \ gc_result ->
    access_prim_bessel_K1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_K1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_K1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_K1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K1_e" prim_bessel_K1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Kn :: Int -> Double -> Double
bessel_Kn n x =
  unsafePerformIO(
    prim_bessel_Kn n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Kn" prim_bessel_Kn :: Int -> Double -> IO (Double)
